Reconstruct, use json.

--- a/src/wetalk_client/config.properties
+++ b/src/wetalk_client/config.properties
@@ -8,10 +8,10 @@ logoutPrefix=<logout>
 registerPrefix=<register>
 getFriendListPrefix=<getFriendList>
 sendMessagePrefix=<sendMessage>
-getLatestMessagePrefix=<getLatestMessage>
+getLatestDataPrefix=<getLatestData>
 addFriendPrefix=<addFriend>
-acceptAddFriendPrefix=<acceptAddFriend>
-rejectAddFriendPrefix=<rejectAddFriend>
+acceptFriendPrefix=<acceptFriend>
+rejectFriendPrefix=<rejectFriend>
 tempPath=temp
 tempFilePrefix=temp_
 tempFileExt=.wtk
