add screenshots to readme.md

--- a/src/wetalk_client/config.properties
+++ b/src/wetalk_client/config.properties
@@ -1,10 +1,10 @@
-mainServerIP=127.0.0.1
-mainServerPort=6666
-localPort=5555
+SERVER_IP=127.0.0.1
+SERVER_PORT=6666
+LOCAL_PORT=5555
+# request/response prefixes
 succeedPrefix=<succeed>
 failPrefix=<fail>
 loginPrefix=<login>
-logoutPrefix=<logout>
 registerPrefix=<register>
 getFriendListPrefix=<getFriendList>
 sendMessagePrefix=<sendMessage>
@@ -12,6 +12,8 @@ getLatestDataPrefix=<getLatestData>
 addFriendPrefix=<addFriend>
 acceptFriendPrefix=<acceptFriend>
 rejectFriendPrefix=<rejectFriend>
+deleteFriendPrefix=<deleteFriend>
+# temp files
 tempPath=temp
 tempFilePrefix=temp_
 tempFileExt=.wtk
